--- a/smarttorino_theme_s/.settings/org.eclipse.wst.common.component
+++ b/smarttorino_theme_s/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="smarttorino_theme_s-theme">
+    <wb-module deploy-name="smarttorino_theme-theme">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-liferay/theme-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="smarttorino_theme_s"/>
-        <property name="java-output-path" value="/smarttorino_theme_s/target/classes"/>
+        <property name="java-output-path" value="/smarttorino_theme/target/classes"/>
+        <property name="context-root" value="smarttorino_theme"/>
     </wb-module>
 </project-modules>
