--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -8,6 +8,16 @@
 	font-weight: normal;
 }
 
+.btn.btn-tsc,.btn.btn-tsc:hover {
+	background-color: #FCCA21;
+	color: #ffffff;
+	border-color: #FCCA21;
+	text-transform: uppercase;
+	background-image: none;
+	text-shadow: none;
+	box-shadow: none;
+}
+
 #wrapper {
 	padding: 0;
 	/* Helvetica Hell... https://css-tricks.com/snippets/css/better-helvetica/ */
@@ -525,6 +535,7 @@ h6.project-update {
 	border-top: 0.5em;
 	border-bottom: 0.5em;
 	border-left: 0.5em; */
+	
 }
 
 .portlet-page-comments .portlet-title {
@@ -536,6 +547,24 @@ h6.project-update {
 	background-color: #F8F9FA;
 }
 
-.portlet-page-comments .portlet-body .lfr-discussion {
+.portlet-page-comments .lfr-discussion {
 	border-bottom-color: #000000;
+}
+
+.portlet-page-comments .fieldset.add-comment {
+	text-align: center;
+}
+
+.portlet-page-comments .btn-tsc-add-comment {
+	margin-bottom: 5px;
+}
+
+.portlet-page-comments .lfr-discussion-body .rating-actions .rating-label,
+.portlet-page-comments .lfr-discussion-body .rating-actions .rating-thumb-down {
+	display: none;
+}
+
+.portlet-page-comments .lfr-discussion:hover .lfr-discussion-actions li a {
+	clip: rect(auto, auto, auto, auto) !important;
+    position: static !important;
 }
