--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -564,7 +564,11 @@ h6.project-update {
 	display: none;
 }
 
-.portlet-page-comments .lfr-discussion:hover .lfr-discussion-actions li a {
+.portlet-page-comments .lfr-discussion .lfr-discussion-actions {
+	margin-right: 1em;
+}
+
+.portlet-page-comments .lfr-discussion .lfr-discussion-actions li a {
 	clip: rect(auto, auto, auto, auto) !important;
     position: static !important;
 }
