--- a/tsc_theme/src/main/webapp/css/smartTorino.css
+++ b/tsc_theme/src/main/webapp/css/smartTorino.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'smartTorino';
-	src:url('fonts/smartTorino.eot?cxqrzy');
-	src:url('fonts/smartTorino.eot?#iefixcxqrzy') format('embedded-opentype'),
-		url('fonts/smartTorino.ttf?cxqrzy') format('truetype'),
-		url('fonts/smartTorino.woff?cxqrzy') format('woff'),
-		url('fonts/smartTorino.svg?cxqrzy#smartTorino') format('svg');
+	src:url('fonts/smartTorino.eot?guda50');
+	src:url('fonts/smartTorino.eot?guda50#iefix') format('embedded-opentype'),
+		url('fonts/smartTorino.ttf?guda50') format('truetype'),
+		url('fonts/smartTorino.woff?guda50') format('woff'),
+		url('fonts/smartTorino.svg?guda50#smartTorino') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.smart-other:before {
+	content: "\e800";
+}
 .smart-cat_energy:before {
 	content: "\e619";
 }
@@ -122,3 +125,4 @@
 .smart-territory-radius:before {
 	content: "\e618";
 }
+
