--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -2,7 +2,7 @@
 
 @import url(smartTorino.css);
 
-@import url(//fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
+@import url("//fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic");
 
 .aui h1,.aui h2,.aui h3,.aui h4,.aui h5,.aui h6 {
 	font-weight: normal;
@@ -561,6 +561,95 @@ h6.project-update {
 	
 }
 
+/* Contenuti media */
+.project-media {
+	margin-top: 2em;
+}
+
+.project-media h4 {
+	text-transform: uppercase;
+}
+
+.project-media .lslide img {
+	max-height: 400px;
+}
+
+.project-media .lSAction a, .project-media .lSAction a:hover {
+	background-image: none;
+	background: #042350;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	color: #fff;
+	text-decoration: none;
+}
+
+.project-media .lSAction a i {
+	display: block;
+    text-align: center;
+    line-height: 32px;
+}
+
+/* RATINGS */
+a.rating-element.rating-thumb-up.icon-thumbs-up:before {
+	font-family: "smartTorino";
+	content: "\e600" !important;
+}
+
+.asset-ratings {
+	margin-top: 1.5em;
+	line-height: 20px;
+	text-align: center;
+}
+
+.asset-ratings .rating-label-tsc {
+	font-weight: bold;
+}
+
+.asset-ratings .taglib-ratings {
+	float: none;
+	display: inline-block;
+}
+
+.taglib-social-bookmarks {
+	background: none;
+	text-align: center;
+}
+
+.taglib-social-bookmarks ul {
+	display: inline-block;
+}
+
+.asset-ratings .taglib-ratings span.rating-label {
+	display: none;
+}
+
+.asset-ratings .taglib-ratings a.rating-element {
+	background-color: transparent;
+	border: none;
+	box-shadow: none;
+	font-size: 2em;
+	padding-right: 12px;
+	text-shadow: none;
+}
+
+.asset-ratings .taglib-ratings a.rating-element.rating-thumb-up {
+	opacity: 1;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.asset-ratings .taglib-ratings a.rating-element.rating-thumb-up.rating-off {
+	color: #ffffff;
+}
+
+.asset-ratings .taglib-ratings a.rating-element.rating-thumb-up.rating-on {
+	color: #FCCA21;
+}
+
+.asset-ratings .taglib-ratings a.rating-element.rating-thumb-down {
+	display: none;
+}
+
 .taglib-discussion .portlet-title {
 	font-size: smaller;
 	text-transform: uppercase;
@@ -582,28 +671,34 @@ h6.project-update {
 	margin-bottom: 5px;
 }
 
-.taglib-discussion .lfr-discussion .lfr-discussion-actions li {
+.taglib-discussion .lfr-discussion-actions li {
 	margin-right: 1em;
 }
 
-.taglib-discussion .lfr-discussion span.rating-label {
+.taglib-discussion span.rating-label {
 	display: none;
 }
 
-.taglib-discussion .lfr-discussion a.rating-element {
+.taglib-discussion a.rating-element {
 	padding: 4px 12px;
 	line-height: 20px !important;
 }
 
-.taglib-discussion .lfr-discussion a.rating-element.icon-thumbs-up:before {
-	content: none !important;
+.taglib-discussion a.rating-element.rating-thumb-up {
+	background-color: #FCCA21;
+	color: #ffffff;
+	border-color: #FCCA21;
+	text-transform: uppercase;
+	background-image: none;
+	text-shadow: none;
+	box-shadow: none;
 }
 
-.taglib-discussion .lfr-discussion-body a.rating-element.rating-thumb-down {
+.taglib-discussion a.rating-element.rating-thumb-down {
 	display: none;
 }
 
-.taglib-discussion .lfr-discussion .lfr-discussion-actions li a {
+.taglib-discussion .lfr-discussion-actions li a {
 	clip: rect(auto, auto, auto, auto) !important;
-    position: static !important;
+	position: static !important;
 }
