Old sign-in link removed

--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -26,6 +26,10 @@
 	font-weight: 300; */
 }
 
+#sign-in {
+	display: none;
+}
+
 #navigation {
 	background-color: #042350;
 	padding: 1em 1em 0 1em;
