--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -1,8 +1,8 @@
 @CHARSET "UTF-8";
 
-@import url("smartTorino.css");
+@import url('smartTorino.css');
 
-@import url("https://fonts.googleapis.com/css?family=Lato:400,300,300italic,700,400italic,700italic");
+@import url('https://fonts.googleapis.com/css?family=Lato:400,300,300italic,700,400italic,700italic');
 
 .aui h1,.aui h2,.aui h3,.aui h4,.aui h5,.aui h6 {
 	font-weight: normal;
@@ -21,7 +21,7 @@
 #wrapper {
 	padding: 0;
 	/* Helvetica Hell... https://css-tricks.com/snippets/css/better-helvetica/ */
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 	/* font-family: 'Roboto', sans-serif;
 	font-weight: 300; */
 }
