--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -559,6 +559,7 @@ h6.project-update {
 	margin: 0.1em 0 0.1em 0.2em;
 	padding: 0.2em;
 	font-size: 3em;
+	font-family: 'smartTorino';
 }
 
 .project-data-table tr:first-child td .project-data {
