--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -1,8 +1,8 @@
 @CHARSET "UTF-8";
 
-@import url('smartTorino.css');
+/* @import url('smartTorino.css'); */
 
-@import url('https://fonts.googleapis.com/css?family=Lato:400,300,300italic,700,400italic,700italic');
+/* @import url('https://fonts.googleapis.com/css?family=Lato:400,300,300italic,700,400italic,700italic'); */
 
 .aui h1,.aui h2,.aui h3,.aui h4,.aui h5,.aui h6 {
 	font-weight: normal;
@@ -780,4 +780,5 @@ a.rating-element.rating-thumb-up.icon-thumbs-up:before {
 .portlet-login .control-group input:-ms-input-placeholder,.sign-in-form .control-group input:-ms-input-placeholder {
 	text-transform: uppercase;
 	font-size: 12px;
-}*/
+}
+*/
