--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -579,6 +579,14 @@ h6.project-update {
 	
 }
 
+.project-actions {
+    margin-top: 1em;
+}
+
+.project-actions .btn {
+    font-size: larger;
+}
+
 /* Contenuti media */
 .project-media {
 	margin-top: 2em;
