--- a/tsc_theme/src/main/webapp/css/custom.css
+++ b/tsc_theme/src/main/webapp/css/custom.css
@@ -299,6 +299,7 @@ li.cat-project-preview-container {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
+	color: #fff;
 }
 
 .cat-project-preview-bottom-text {
